--- a/src/styles/scss/layouts/_app.scss
+++ b/src/styles/scss/layouts/_app.scss
@@ -24,14 +24,28 @@ body {
   }
 }
 
+.hamburger-button {
+  display: none;  // Hide by default
+  flex-direction: column;
+  cursor: pointer;
+  padding: 2vh 5vw 0 0;
+  & svg {
+    height: 2em;
+    width: 2em;
+  }
+
+  transition: display 0.3s ease-in-out;
+
+  @include belowScreen(large) {
+    display: flex;
+  }
+}
+
 .nav-section {
   display: flex;
   flex-direction: column;
-  flex: 1;
   transition: transform 0.5s, width 0.5s;
-  justify-content: space-evenly;
   align-items: flex-end;
-
   background-image: linear-gradient(
     270deg,
     hsl(227, 80%, 5%),
@@ -51,12 +65,16 @@ body {
   }
 
   @include belowScreen(large) {
-    align-items: center;
+    // align-items: center;
+    justify-content: flex-start;
     &.open {
       width: 100% !important;
       transform: translateX(0%);
     }
-
+    &.closed {
+      display: none;
+    }
+    margin: 0;
     background-image: linear-gradient(
       0deg,
       hsl(227, 80%, 5%),
@@ -66,6 +84,20 @@ body {
       hsla(226, 60%, 8%, 0.95),
       hsla(226, 50%, 10%, 0.9)
     );
+  }
+}
+
+.menu {
+  margin: 5vh auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  @include belowScreen(large) {
+    margin: 0 auto;
+    &.closed {
+      display: none;
+    }
   }
 }
 
@@ -90,7 +122,7 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    // display: none;
+    height: fit-content;
   }
 }
 
@@ -156,11 +188,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  margin-top: 5rem;
-  margin-left: auto;
-  margin-right: 5rem;
-
   & .profile-image {
     height: 10vh;
     border-radius: 50%;
@@ -171,8 +198,7 @@ body {
   }
 
   @include belowScreen(large) {
-    margin-top: 2rem;
-    margin-right: auto;
+    margin:0 auto;
     flex-direction: row-reverse;
     align-items: flex-start;
     & .profile-text {
@@ -318,16 +344,18 @@ body {
 }
 
 .pdf-container {
-  // margin: 1vh auto auto 1vw;
-  margin-top: 1vh;
-  margin-right: auto;
-  margin-left: 5vw;
+  margin: 1vh auto;
+  // margin-top: 1vh;
+  // margin-right: auto;
+  // margin-left: 5vw;
   display: flex;
   flex-direction: column;
   align-items: center;
-  & .pdf-page {
-    overflow: hidden;
-  }
+  height: 100vh;
+
+  // & .pdf-page {
+  //   overflow-y: scroll;
+  // }
 }
 
 .zoom-control {
